--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,5 +9,9 @@ jobs:
         - checkout
         - run: yarn install
         - run: yarn test
-        - run: ls
-        - run: pwd
+        - run:
+          name: docker login
+          command: 'docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASSWORD'
+        - run:
+          name: docker build
+          command: 'docker build -t my-app .'
