--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ jobs:
         - run : yarn test
         - run :
             name: docker login
-            command: 'docker login -u $DOCKER_USER -p $DOCKER_PASSWORD'
+            command: "docker login -u $DOCKER_USER -p $DOCKER_PASSWORD"
         - run:
             name: docker build
-            command: 'docker build -t my-app .'
+            command: "docker build -t my-app ."
