--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,27 +5,12 @@ jobs:
       docker:
         - image: circleci/node:7
         - image: jonbaldie/yarn:latest
+        - image: docker/docker:latest
       steps:
         - checkout
         - run : yarn install
         - run : yarn test
-        - type: shell
-          name: Install Docker Client
-          command: |
-            echo "test"
-            curl -L -o /tmp/docker.tgz https://get.docker.com/builds/Linux/x86_64/docker-1.12.3.tgz
-            tar -xz -C /tmp -f /tmp/docker.tgz
-            mv /tmp/docker/docker* /usr/bin/
-
-            curl -L "https://github.com/docker/compose/releases/download/1.9.0/docker-compose-$(uname -s)-$(uname -m)" -o /usr/bin/docker-compose
-            chmod +x  /usr/bin/docker-compose
-
-        - type: setup-docker-engine
-        - type: shell
-          name: Verify Docker Works
-          command: |
-            docker --version
-            docker run hello-world
+        - run : docker info
         - run :
             name: docker login
             command: "docker login -u $DOCKER_USER -p $DOCKER_PASSWORD"
