--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,3 +17,6 @@ jobs:
         - run:
             name: docker build
             command: "docker build -t my-app ."
+        - run:
+            name: docker push image
+            command: "docker push joseangelmr/my-app:$CIRCLE_BRANCH"
