--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ jobs:
     build:
       working_directory: ~/repo
       docker:
-        - ansible/ansible:ubuntu1604
+        - image: ansible/ansible:ubuntu1604
       steps:
         - checkout
         - setup_remote_docker
