--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,7 @@ jobs:
       working_directory: ~/repo
       docker:
         - image: circleci/node:7
+        - image: circleci/python:3.6.1
         - image: ansible/ansible:ubuntu1604
       steps:
         - checkout
