--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,19 +8,19 @@ jobs:
       steps:
         - checkout
         - setup_remote_docker
-        - run : docker info
-        - run :
-            name: docker login
-            command: "docker login -u $DOCKER_USER -p $DOCKER_PASSWORD"
-        - run:
-            name: docker build
-            command: "docker build -t my-app ."
-        - run:
-            name: docker create tag
-            command: "docker tag my-app joseangelmr/my-app:latest"
-        - run:
-            name: docker push image
-            command: "docker push joseangelmr/my-app:latest"
+        # - run : docker info
+        # - run :
+        #     name: docker login
+        #     command: "docker login -u $DOCKER_USER -p $DOCKER_PASSWORD"
+        # - run:
+        #     name: docker build
+        #     command: "docker build -t my-app ."
+        # - run:
+        #     name: docker create tag
+        #     command: "docker tag my-app joseangelmr/my-app:latest"
+        # - run:
+        #     name: docker push image
+        #     command: "docker push joseangelmr/my-app:latest"
         - run:
             name: server deploy
-            command: "sudo apt-get update && sudo apt-get install software-properties-common && sudo apt-add-repository ppa:ansible/ansible -y"
+            command: "sudo apt-get update && sudo apt-get install software-properties-common && sudo apt-add-repository ppa:ansible/ansible -y && sudo apt-get update"
