--- a/ansible/deploy.yml
+++ b/ansible/deploy.yml
@@ -3,7 +3,7 @@
   hosts: aws-server
   vars_files:
     - ["vars/default.yml"]
-  become: yes
+  sudo: yes
   tasks:
     - name: Create a data container
       docker_container:
