--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,4 +23,4 @@ jobs:
         #     command: "docker push joseangelmr/my-app:latest"
         - run:
             name: server deploy
-            command: "sudo apt-get update && sudo apt-get install software-properties-common && sudo apt-add-repository ppa:ansible/ansible -y && sudo apt-get install ansible && ansible-playbook ansible/deploy.yml"
+            command: "sudo easy_install pip && sudo pip install ansible && ansible-playbook ansible/deploy.yml"
